[tool.poetry]
name = "ssh-zone-handler"
version = "0.2.1"
description = "SSH commands to provide Secondary DNS self-service."
readme = "README.md"
license = "MIT"
authors = ["Andreas Olsson <andreas@arrakis.se>"]
repository = "https://github.com/andreaso/ssh-zone-handler"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
szh-sudoers = "ssh_zone_handler.cli:sudoers"
szh-wrapper = "ssh_zone_handler.cli:wrapper"

[tool.isort]
profile = "black"

[tool.pylint.'MAIN']
extension-pkg-allow-list = "pydantic"
disable="too-few-public-methods"

[tool.pytest.ini_options]
log_format = "%(message)s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
