[tool.poetry]
name = "ssh-zone-handler"
version = "0.3.3"
description = "SSH commands to provide Secondary DNS self-service."
readme = "README.md"
license = "MIT"
authors = ["Andreas Olsson <andreas@arrakis.se>"]
repository = "https://github.com/andreaso/ssh-zone-handler"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-mock = "^3.15.1"
types-pyyaml = "^6.0.12.9"
ruff = "^0.14.2"

[tool.poetry.scripts]
szh-sudoers = "ssh_zone_handler.cli:sudoers"
szh-wrapper = "ssh_zone_handler.cli:wrapper"

[tool.pytest.ini_options]
log_format = "%(message)s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
